--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -2,7 +2,9 @@ name: Hot News Crawler
 
 on:
   schedule:
-    - cron: '*/50 * * * *'  # 每50分钟运行一次
+    # 智能频率控制：工作时间每2小时，非工作时间每4小时
+    - cron: '0 9,11,13,15,17 * * *'    # 工作时间：9,11,13,15,17点
+    - cron: '0 19,23,3,7 * * *'        # 非工作时间：19,23,3,7点
   workflow_dispatch:
 
 # 添加权限设置
